complete hero section

--- a/index.html
+++ b/index.html
@@ -21,6 +21,16 @@
                 </ul>
             </div>
         </nav>
+        <div class="hero-section">
+            <div class="text">
+                <div class="main-text">Hi, I am Kirito</div>
+                <div class="secondary-text">I survived and complete the Sword Art Online game in 2022. I am providing training classes on how you can do well in these games. Click the button below to sign up today.</div>
+                <button class="signup-button">Sign up</button>
+            </div>
+            <div class="image">
+                <img src="./assets/heroimg.webp" alt="Kirito in flight mode">
+            </div>
+        </div>
     </header>
 </body>
 </html>
