complete main section

--- a/index.html
+++ b/index.html
@@ -32,5 +32,45 @@
             </div>
         </div>
     </header>
+    <main>
+        <div class="info">
+            <div class="info-heading">
+                Games I have mastered
+            </div>
+            <div class="games">
+                <div class="game">
+                    <div class="thumbnail"><img src="./assets/sao_cover.png" alt="Sword Art Online cover"></div>
+                    <div class="text">Sword Art Online</div>
+                </div>
+                <div class="game">
+                    <div class="thumbnail"><img src="./assets/ggo_cover.webp" alt="Gun Gale Online Cover"></div>
+                    <div class="text">Gun Gale Online</div>
+                </div>
+                <div class="game">
+                    <div class="thumbnail"><img src="./assets//alo_cover.webp" alt="ALfeihm Online Cover"></div>
+                    <div class="text">ALfeihm Online</div>
+                </div>
+                <div class="game">
+                    <div class="thumbnail"><img src="./assets/alicization_cover.webp" alt="Alicization Cover"></div>
+                    <div class="text">Alicization Cover</div>
+                </div>
+            </div>
+        </div>
+        <div class="quote">
+            <div class="text"><em>
+                “I thought that the closer the real and virtual world got, the better the future would be. But the more the boundary
+                between them blurs, the more it starts to trick people.”
+            </em></div>
+            <div class="author"><strong>- Kiroto, Professional VRMMO Gamer</strong></div>
+        </div>
+
+        <div class="call-to-action">
+            <div class="text">
+                <div class="header">Call to action! It's time!</div>
+                <div class="secondary">Sign up for the classes today by clicking that button.</div>
+            </div>
+            <button class="signup">Sign up</button>
+        </div>
+    </main>
 </body>
 </html>
