--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
         <nav>
             <div class="left logo-text">
-                Kirito
+                Kirito Foundations
             </div>
             <div class="right navlinks">
                 <ul>
@@ -72,5 +72,8 @@
             <button class="signup">Sign up</button>
         </div>
     </main>
+    <footer>
+        Copyright &copy; Kirito Foundations 2021
+    </footer>
 </body>
 </html>
